fix: fix issues with trigger element alignment

--- a/components/floater/src/styles/style.scss
+++ b/components/floater/src/styles/style.scss
@@ -8,4 +8,5 @@
 
 [popovertarget] {
   width: 100%;
+  text-align: inherit;
 }
